@@ -1,16 +1,15 @@
 package org.folio.bulkops.domain.converter;
 
-import org.apache.commons.lang3.ObjectUtils;
-import org.folio.bulkops.domain.bean.ElectronicAccess;
-import org.folio.bulkops.service.ElectronicAccessHelper;
+import static org.folio.bulkops.util.Constants.ITEM_DELIMITER;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static org.folio.bulkops.util.Constants.ITEM_DELIMITER;
+import org.apache.commons.lang3.ObjectUtils;
+import org.folio.bulkops.domain.bean.ElectronicAccess;
+import org.folio.bulkops.service.ElectronicAccessHelper;
 
 public class ElectronicAccessListConverter extends BaseConverter<List<ElectronicAccess>> {
 
@@ -19,7 +18,7 @@ public class ElectronicAccessListConverter extends BaseConverter<List<Electronic
     return Arrays.stream(value.split("\\|"))
       .map(ElectronicAccessHelper.service()::restoreElectronicAccessItem)
       .filter(ObjectUtils::isNotEmpty)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
@@ -28,10 +27,5 @@ public class ElectronicAccessListConverter extends BaseConverter<List<Electronic
       .filter(Objects::nonNull)
       .map(ElectronicAccessHelper.service()::electronicAccessToString)
       .collect(Collectors.joining(ITEM_DELIMITER));
-  }
-
-  @Override
-  public List<ElectronicAccess> getDefaultObjectValue() {
-    return Collections.emptyList();
   }
 }
